--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/generator": "^7.27.1",
+    "@vue/compiler-core": "^3.5.13",
+    "fs-extra": "^11.3.0",
+    "lodash-es": "^4.17.21",
+    "axios": "^1.9.0"
+  },
   "devDependencies": {
     "tsx": "^4.21.0",
     "vue": "^3.5.13",
-    "@babel/core": "^7.27.1",
-    "@babel/generator": "^7.27.1",
     "@types/node": "^22.15.17",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "@vue/compiler-core": "^3.5.13",
-    "axios": "^1.9.0",
-    "fs-extra": "^11.3.0",
-    "lodash-es": "^4.17.21",
     "vite": "^6.0.1",
     "vue-i18n": "^11.1.3"
   }
