refactor: update package.json for build configuration and dependencies
- Changed main and module entry points to point to compiled files in ./dits/
- Updated build script to use a specific configuration file (vite.config.build.ts)
- Added axios to dependencies
- Cleaned up devDependencies by ensuring no duplicates

chore: modify tsconfig.json to include TypeScript files from autoTranslation directory

- Updated include path to focus on autoTranslation/**/*.ts

feat: add vite.config.build.ts for library build configuration

- Configured Vite to build the library with specified formats and external dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "moduleResolution": "node",
     "module": "esnext"
   },
-  "include": ["./vite.config.ts", "vite.config.debugger.ts"]
+  "include": ["./autoTranslation/**/*.ts"]
 }
