--- a/package.json
+++ b/package.json
@@ -3,32 +3,34 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "./autoTranslation/index.ts",
-  "module": "./autoTranslation/index.ts",
+  "main": "./dits/auto-translation.cjs",
+  "module": "./dits/auto-translation.js",
+  "types": "./dits/index.d.ts",
   "files": [
     "autoTranslation"
   ],
   "scripts": {
     "debugger": "tsx vite.config.debugger.ts",
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --config vite.config.build.ts",
     "preview": "vite preview"
   },
   "dependencies": {
     "@babel/core": "^7.27.1",
     "@babel/generator": "^7.27.1",
     "@vue/compiler-core": "^3.5.13",
+    "axios": "^1.9.0",
     "fs-extra": "^11.3.0",
-    "lodash-es": "^4.17.21",
-    "axios": "^1.9.0"
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "tsx": "^4.21.0",
-    "vue": "^3.5.13",
     "@types/node": "^22.15.17",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "tsx": "^4.21.0",
     "vite": "^6.0.1",
+    "vite-plugin-dts": "^4.5.4",
+    "vue": "^3.5.13",
     "vue-i18n": "^11.1.3"
   }
 }
